--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 var table = jsonData["valueRanges"];
                 var nameData = table[0]["values"];
                 var dateData = table[1]["values"];
-                var selection = Math.floor(Math.random() * nameData.length);
+                var selection = Math.floor(Math.random() * (nameData.length - 1)) + 1;
                 console.log('Index: ' + selection + ' Title Selected: ' + nameData[selection][0] + ' Date: ' +
                     dateData[selection][0]);
                 $('#movieBox').find("h1").text(nameData[selection]);
