--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
                 var nameData = table[0]["values"];
                 var dateData = table[1]["values"];
                 var runtimeData = table[2]["values"];
+                var ownerData = table[3]["values"];
                 var selection = Math.floor(Math.random() * (nameData.length - 1)) + 1;
                 console.log('Index: ' + selection + ' Title Selected: ' + nameData[selection][0] + ' Date: ' +
-                    dateData[selection][0] + ' Runtime: ' + runtimeData[selection][0]);
+                    dateData[selection][0] + ' Runtime: ' + runtimeData[selection][0] + ' Owner: ' + ownerData[selection][0]);
+                $('#movieBox').find("h4").text(ownerData[selection] + '\' copy of')
                 $('#movieBox').find("h1").text(nameData[selection]);
                 $('#movieBox').find("h2").text('('+ dateData[selection] + ')');
                 if(runtimeData[selection] == ""){
@@ -31,7 +33,7 @@
             }
         }
         req.open("GET",
-            "https://sheets.googleapis.com/v4/spreadsheets/1ybXr7pnVcWfeLJNit8rmIj1Cdc7WoIVg4BtCX_GFepY/values:batchGet?ranges=A%3AA&ranges=E%3AE&ranges=H%3AH&key=AIzaSyC-KLF691r5c3Xbvj2fUmBR7WfFyZsLl4g"
+            "https://sheets.googleapis.com/v4/spreadsheets/1ybXr7pnVcWfeLJNit8rmIj1Cdc7WoIVg4BtCX_GFepY/values:batchGet?ranges=A%3AA&ranges=E%3AE&ranges=H%3AH&ranges=B%3AB&key=AIzaSyC-KLF691r5c3Xbvj2fUmBR7WfFyZsLl4g"
         );
         req.send();
     </script>
@@ -44,6 +46,7 @@
                 <h3 id="preText">You should watch...</h3>
 
                 <div id="movieBox">
+                    <h4>Owner's copy of</h4>
                     <h1>Movie Title</h1>
                     <h2>(2018)</h2>
                     <h3>(0 minutes)</h3>
