--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 var selection = Math.floor(Math.random() * (nameData.length - 1)) + 1;
                 console.log('Index: ' + selection + ' Title Selected: ' + nameData[selection][0] + ' Date: ' +
                     dateData[selection][0] + ' Runtime: ' + runtimeData[selection][0] + ' Owner: ' + ownerData[selection][0]);
-                $('#movieBox').find("h4").text(ownerData[selection] + '\'s copy of')
-                $('#movieBox').find("h1").text(nameData[selection]);
-                $('#movieBox').find("h2").text('('+ dateData[selection] + ')');
+                $('#ownerText').text(ownerData[selection] + '\'s copy of')
+                $('#titleText').text(nameData[selection]);
+                $('#dateText').text('('+ dateData[selection] + ')');
                 if(runtimeData[selection] == ""){
-                    $('#movieBox').find("h3").text('');    
+                    $('#runtimeText').text('');    
                 } else {
-                    $('#movieBox').find("h3").text('(' + runtimeData[selection] + ' minutes' + ')');
+                    $('#runtimeText').text('(' + runtimeData[selection] + ' minutes' + ')');
                 }
             }
         }
@@ -46,10 +46,10 @@
                 <h3 id="preText">You should watch...</h3>
 
                 <div id="movieBox">
-                    <h4>Owner's copy of</h4>
-                    <h1>Movie Title</h1>
-                    <h2>(2018)</h2>
-                    <h3>(0 minutes)</h3>
+                    <h3 id="ownerText">Owner's copy of</h3>
+                    <h1 id="titleText">Movie Title</h1>
+                    <h2 id="dateText">(2018)</h2>
+                    <h3 id="runtimeText">(0 minutes)</h3>
                 </div>
 
                 <div><a onclick="location.reload()">
